--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           </button>
         </a>
         <a class="nav-link" href="https://github.com/nekena200103/EVAL-FARANY/blob/main/src/java/controller/DefaultController.java">
-          <button type="button" class="rounded-pill btn-rounded border-primary">Voir la classe DefaultController classe fille de DefaulController
+          <button type="button" class="rounded-pill btn-rounded border-primary">Voir la classe DefaultController 
             <span><i class="fab fa-github"></i></span>
           </button>
         </a>
