--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
            Je suis un passionné de la programmation,après trois ans à étudier au sein de IT university j'aimerai vous offrir mes services en tant que développeur fullstack
           </span>
         </h1>
-        <a href="cvako.pdf" download="CV.pdf" style="text-decoration: none;"><button type="button" class="rounded-pill btn-rounded">Telecharger mon cv en format pdf
+        <a href="cvako.pdf" download="CV.pdf" style="text-decoration: none;"><button type="button" class="rounded-pill btn-rounded">Telecharger mon CV en format pdf
           <span><i class="fas fa-arrow-right"></i></span>
         </button></a>
         <br>
-        <a href="cvako.png" download="CV.png" style="text-decoration: none;"><button type="button" class="rounded-pill btn-rounded">Telecharger mon cv en format image
+        <a href="cvako.png" download="CV.png" style="text-decoration: none;"><button type="button" class="rounded-pill btn-rounded">Telecharger mon CV en format image
           <span><i class="fas fa-arrow-right"></i></span>
         </button></a>
       </div>
